--- a/1.0 Architecture/1.1 Explain the different design principles used in an enterprise network/1.1.a Enterprise network design such as Tier 2, Tier 3, and Fabric Capacity planning.md
+++ b/1.0 Architecture/1.1 Explain the different design principles used in an enterprise network/1.1.a Enterprise network design such as Tier 2, Tier 3, and Fabric Capacity planning.md
@@ -1,1 +1,6 @@
-# TEST
+# 1.1.a Enterprise network design such as Tier 2, Tier 3, and Fabric Capacity planning
+
+### Hierarchical Network Design
+--------------------------------
+
+![Hierarchical LAN Design Model](Hierarchical_LAN_Design_Model.png)
