--- a/1.0 Architecture/1.1 Explain the different design principles used in an enterprise network/1.1.a Enterprise network design such as Tier 2, Tier 3, and Fabric Capacity planning.md
+++ b/1.0 Architecture/1.1 Explain the different design principles used in an enterprise network/1.1.a Enterprise network design such as Tier 2, Tier 3, and Fabric Capacity planning.md
@@ -4,7 +4,7 @@
 --------------------------------
 The hierarchical network design that is pictured below represents a topology where there are 3 layers:
 
-1. Access Layer - also referred to as the **network edge**, this layer is where end-user devices or endpoints connect to the network infrastructure.  In this layer, you will see many devices that are either personal devices or wireless access points (WAPs).
+1. **Access Layer** - also referred to as the **network edge**, this layer is where end-user devices or endpoints connect to the network infrastructure.  In this layer, you will see many devices that are either personal devices or wireless access points (WAPs).
    - This layer provides high bandwidth device connections using wired and wireless acces technologies such as GigabitEthernet and 802.1n and 802.1ac wireless.
    - Types fo devices that you will see connected into this layer include PCs, IP phones, printers, WAPs, personal telepresence devices, and IP surveillance cameras.
    - The access layer can be segmented using VLANs to place devices into separate different **logical** networks which helps with performance, management, and security.
@@ -12,7 +12,7 @@ The hierarchical network design that is pictured below represents a topology whe
     * Authentication at this layer through the means of RADIUS or TACACS+ can help with authenticating the correct users and keep threat vectors from getting into resources that they should not be in.
     * The QoS trust boundary and mechanisms are enabled here to ensure that QoS is provided end-to-end to satisfy the end-users' quality of experience (QoE)
 
-2. Distribution Layer - this layer's primary function is to aggregate the access layer switches in a given building or campus.  When a bunch of switches become meshed together with more and more connections between each other, a distribution layer should be implemented to decrease the number of connections that the switches have to make.
+2. **Distribution Layer** - this layer's primary function is to aggregate the access layer switches in a given building or campus.  When a bunch of switches become meshed together with more and more connections between each other, a distribution layer should be implemented to decrease the number of connections that the switches have to make.
    - This layer provides a boundary between the Layer 2 access layer domain and the Layer 3 core layer domain.  Think of the distribution layer as a middle man between the access and core layers.  When the access layer communicates up the chain, it answers to the distribution layer, and from there the distribution layer send the information that it received from the access layer and sends it up to the core layer.
 
 There are 2 key functions of this boundary:
@@ -21,7 +21,7 @@ There are 2 key functions of this boundary:
 
 Distribution switches need to be deployed in **pairs** for redundancy, as pictured below.
 
-3. Core Layer - This layer is concidered the backbone and aggregation point for multiple networks and provides:
+3. **Core Layer** - This layer is concidered the backbone and aggregation point for multiple networks and provides:
    - Scalibility
    - High Availabilty
    - Fast convergence for the network
