--- a/1.0 Architecture/1.1 Explain the different design principles used in an enterprise network/1.1.a Enterprise network design such as Tier 2, Tier 3, and Fabric Capacity planning.md
+++ b/1.0 Architecture/1.1 Explain the different design principles used in an enterprise network/1.1.a Enterprise network design such as Tier 2, Tier 3, and Fabric Capacity planning.md
@@ -4,35 +4,40 @@
 --------------------------------
 The hierarchical network design that is pictured below represents a topology where there are 3 layers:
 
-1. **Access Layer** - also referred to as the **network edge**, this layer is where end-user devices or endpoints connect to the network infrastructure.  In this layer, you will see many devices that are either personal devices or wireless access points (WAPs).
-   - This layer provides high bandwidth device connections using wired and wireless acces technologies such as GigabitEthernet and 802.1n and 802.1ac wireless.
-   - Types fo devices that you will see connected into this layer include PCs, IP phones, printers, WAPs, personal telepresence devices, and IP surveillance cameras.
-   - The access layer can be segmented using VLANs to place devices into separate different **logical** networks which helps with performance, management, and security.
-   - This layer also helps end-devices to connect knowing that there is a layer of protection from malicious attacks.  Although malicious attacks can still be an issue, this layer helps to decrease the risk.
+1. Access Layer
+1. Distribution Layer
+1. Core Layer
+
+
+**Access Layer** - also referred to as the **network edge**, this layer is where end-user devices or endpoints connect to the network infrastructure.  In this layer, you will see many devices that are either personal devices or wireless access points (WAPs).  
+  * This layer provides high bandwidth device connections using wired and wireless acces technologies such as GigabitEthernet and 802.1n and 802.1ac wireless.
+  * Types fo devices that you will see connected into this layer include PCs, IP phones, printers, WAPs, personal telepresence devices, and IP surveillance cameras.
+  * The access layer can be segmented using VLANs to place devices into separate different **logical** networks which helps with performance, management, and security.
+  * This layer also helps end-devices to connect knowing that there is a layer of protection from malicious attacks.  Although malicious attacks can still be an issue, this layer helps to decrease the risk.
     * Authentication at this layer through the means of RADIUS or TACACS+ can help with authenticating the correct users and keep threat vectors from getting into resources that they should not be in.
     * The QoS trust boundary and mechanisms are enabled here to ensure that QoS is provided end-to-end to satisfy the end-users' quality of experience (QoE).
 
-2. **Distribution Layer** - this layer's primary function is to aggregate the access layer switches in a given building or campus.  When a bunch of switches become meshed together with more and more connections between each other, a distribution layer should be implemented to decrease the number of connections that the switches have to make.
-   - This layer provides a boundary between the Layer 2 access layer domain and the Layer 3 core layer domain.  Think of the distribution layer as a middle man between the access and core layers.  When the access layer communicates up the chain, it answers to the distribution layer, and from there the distribution layer send the information that it received from the access layer and sends it up to the core layer.
+**Distribution Layer** - this layer's primary function is to aggregate the access layer switches in a given building or campus.  When a bunch of switches become meshed together with more and more connections between each other, a distribution layer should be implemented to decrease the number of connections that the switches have to make.
+  * This layer provides a boundary between the Layer 2 access layer domain and the Layer 3 core layer domain.  Think of the distribution layer as a middle man between the access and core layers.  When the access layer communicates up the chain, it answers to the distribution layer, and from there the distribution layer send the information that it received from the access layer and sends it up to the core layer.
 
 There are 2 key functions of this boundary:
-  - On the Layer 2 side, it creates a boundary for STP (Spanning Tree Protocol) which limits the propogation of layer 2 faults.
-  - On the Layer 3 side, it provides a logical point to summarize IP routing tables for easier troubleshooting and reduces protocol overhead for faster recovery from failures.
+  * On the Layer 2 side, it creates a boundary for STP (Spanning Tree Protocol) which limits the propogation of layer 2 faults.
+  * On the Layer 3 side, it provides a logical point to summarize IP routing tables for easier troubleshooting and reduces protocol overhead for faster recovery from failures.
 
 Distribution switches need to be deployed in **pairs** for redundancy, as pictured below.
 
-3. **Core Layer** - This layer is concidered the backbone and aggregation point for multiple networks and provides:
-   - Scalibility
-   - High Availabilty
-   - Fast convergence for the network
+**Core Layer** - This layer is concidered the backbone and aggregation point for multiple networks and provides:
+  * Scalibility
+  * High Availabilty
+  * Fast convergence for the network
   * The core layer can provide high-speed connectivity for larger enterprises with multiple campus networks.
   * This layer can provide interconnectivity between the end-user access layer and other network blocks such as:
-    - Data Center
-    - Private Cloud
-    - Public Cloud
-    - Internet edge
-    - WAN
-    - Network services
+    * Data Center
+    * Private Cloud
+    * Public Cloud
+    * Internet edge
+    * WAN
+    * Network services
 
 Pictured below is an example of a hierarchical Tier 3 design that has 4 access switches in the access layer all interconnected with 2 distribution switches and those 2 switches are connected together and then connected up to 2 core layer routers.  This design is perfect for a large enterprise network that has multiple branches or offices that need that single core layer.
 ![Hierarchical LAN Design Model](Hierarchical_LAN_Design_Model.png)
