--- a/1.0 Architecture/1.1 Explain the different design principles used in an enterprise network/1.1.a Enterprise network design such as Tier 2, Tier 3, and Fabric Capacity planning.md
+++ b/1.0 Architecture/1.1 Explain the different design principles used in an enterprise network/1.1.a Enterprise network design such as Tier 2, Tier 3, and Fabric Capacity planning.md
@@ -1,8 +1,12 @@
 ## 1.1.a Enterprise network design such as Tier 2, Tier 3, and Fabric Capacity planning
 
+You have been assigned as the new Netowrk Infrastructure Lead for a new company that has just landed as a Fortune 500 company!  They ask you to lead a team that will help to implement a new network infrastructure and that you will have to make the big decisions on what type of equipment they will need and what you should buy for the company to get their company going.  Only problem is, there is a tight budget for the project and there is absolutely no way you can ask for more money without looking crazy.  I mean, you are helping them get connected with their 2 other remote branches.  So what do you do?
+
+This objective will help you better understand what you would do in a situation like this.  Being able to look at a company's needs and tell them they need this type of network with those types of switches and routers is quite scary, unless you know the lingo!  But first, in order to persuade them to buy something that they think they don't need, you need to know about a network infrastructure in depth.
+
 ### Hierarchical Network Design
 --------------------------------
-The hierarchical network design that is pictured below represents a topology where there are 3 layers:
+The hierarchical network design has a topology where there are 3 layers:
 
 1. Access Layer
 1. Distribution Layer
