--- a/1.0 Architecture/1.1 Explain the different design principles used in an enterprise network/1.1.a Enterprise network design such as Tier 2, Tier 3, and Fabric Capacity planning.md
+++ b/1.0 Architecture/1.1 Explain the different design principles used in an enterprise network/1.1.a Enterprise network design such as Tier 2, Tier 3, and Fabric Capacity planning.md
@@ -45,6 +45,8 @@ Distribution switches need to be deployed in **pairs** for redundancy, as pictur
 
 Pictured below is an example of a hierarchical Tier 3 design that has 4 access switches in the access layer all interconnected with 2 distribution switches and those 2 switches are connected together and then connected up to 2 core layer routers.  This design is perfect for a large enterprise network that has multiple branches or offices that need that single core layer.
 ![Hierarchical LAN Design Model](Hierarchical_LAN_Design_Model.png)
+*Figure 1: Example of the Tier 3 Hierarchical LAN Design Model*
+
 
 But what happens when the company isn't that large?  What if the office is just one building and they don't necessarily NEED this type of topology?  Well, let's move to the next topic and find out!
 
