--- a/1.0 Architecture/1.1 Explain the different design principles used in an enterprise network/1.1.a Enterprise network design such as Tier 2, Tier 3, and Fabric Capacity planning.md
+++ b/1.0 Architecture/1.1 Explain the different design principles used in an enterprise network/1.1.a Enterprise network design such as Tier 2, Tier 3, and Fabric Capacity planning.md
@@ -50,4 +50,4 @@ Pictured below is an example of a hierarchical Tier 3 design that has 4 access s
 
 But what happens when the company isn't that large?  What if the office is just one building and they don't necessarily NEED this type of topology?  Well, let's move to the next topic and find out!
 
-[CCNP Notes](https://rcestep.github.io/CCNP-Notes) / [1.0 Architecture](../..) / [1.1 Explain the different design principles used in an enterprise network](README.md) / **1.1.a Enterprise network design such as Tier 2, Tier 3, and Fabric Capacity planning**
+[CCNP Notes](https://rcestep.github.io/CCNP-Notes) / [1.0 Architecture](..) / [1.1 Explain the different design principles used in an enterprise network](README.md) / **1.1.a Enterprise network design such as Tier 2, Tier 3, and Fabric Capacity planning**
