--- a/1.0 Architecture/1.1 Explain the different design principles used in an enterprise network/1.1.a Enterprise network design such as Tier 2, Tier 3, and Fabric Capacity planning.md
+++ b/1.0 Architecture/1.1 Explain the different design principles used in an enterprise network/1.1.a Enterprise network design such as Tier 2, Tier 3, and Fabric Capacity planning.md
@@ -45,7 +45,7 @@ Distribution switches need to be deployed in **pairs** for redundancy, as pictur
 
 A **network block** is simply a logical block that represents a certain service or technology.  It groups together a network as to make the logical topology easier to read.  Taking the devices connected together and making one single block, the logical topology can look smoother and easier to manage.  Each network block contains it's own access, distribution and core layers, they are condensed into one single block or place in the network (PIN).
 
-Pictured below is an example of a hierarchical Tier 3 design that has 4 access switches in the access layer all interconnected with 2 distribution switches and those 2 switches are connected together and then connected up to 2 core layer routers.  This design is perfect for a large enterprise network that has multiple branches or offices that need that single core layer.
+Pictured below is an example of a hierarchical Tier 3 design that has 4 access switches in the access layer all interconnected with 2 distribution switches and those 2 switches are connected together and then connected up to 2 core layer routers.  This design is perfect for a large enterprise network that has multiple branches or offices that need that single core layer.  The reason why it is called a **Tier 3 design** is because each of the layers are in it's separate domain.  The access layer, distribution layer, and the core layer all are separate parts of the network that have their own functions.  3 domains, 3 tiers.
 ![Hierarchical LAN Design Model](Hierarchical_LAN_Design_Model.png)
 *Figure 1: Example of the Tier 3 Hierarchical LAN Design Model*
 
