--- a/1.0 Architecture/1.1 Explain the different design principles used in an enterprise network/1.1.a Enterprise network design such as Tier 2, Tier 3, and Fabric Capacity planning.md
+++ b/1.0 Architecture/1.1 Explain the different design principles used in an enterprise network/1.1.a Enterprise network design such as Tier 2, Tier 3, and Fabric Capacity planning.md
@@ -56,7 +56,7 @@ But what happens when the company isn't that large?  What if the office is just 
 --------------------------------------
 When you don't need separate network blocks for your network and your needs are less than that of an organization, the **2 Tier design** can accomplish the needs for your smaller business.  A design model for this would **collapse** 2 cores, hence the **collapsed core**.  By combining 2 tiers together, you can have a smaller network to work with if necessary.  You can collapse the Core layer and Distribution layers and leave the Access layer alone, or you can leave the Core layer alone and combine the Distibution and Access layers.  It all depends on the equipment that is being used.  If you have routers that can be used for the core layer, and some distribution switches, you can use the Core Dist/Acc model when the routers are connected to that switch and the end devices connected to the distribution switch.  Depending on the needs and equipment will depend on what type of model you can use.
 
-__**Note that you cannot combine the Core layer with the Access layer.  The Three Tier Model should still be referenced and the Distribution layer is in the middle of the Core and Access**__
+<u><strong>Note that you cannot combine the Core layer with the Access layer.  The Three Tier Model should still be referenced and the Distribution layer is in the middle of the Core and Access</strong></u>
 
 If you took Figure 1 for example, you could see that the switches being used connect between the routers and clients.  If by chance those switches were MultiLayer switches, you could just use the switches as the core and distribution layer and take the routers out of the equation.  It really depends on the needs of your company/client and the design that is desired for the company.
 
